--- a/app/index.html
+++ b/app/index.html
@@ -5,10 +5,78 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link
+      href="https://fonts.googleapis.com/css2?family=Lato&family=Open+Sans:wght@600&family=Roboto:wght@400;500;700&display=swap"
+      rel="stylesheet">
     <link rel="stylesheet" href="css/app.min.css" />
   </head>
 
   <body>
+
+    <header class="header">
+      <div class="header__top">
+        <div class="container">
+          <div class="header__top-inner">
+            <div class="header__logo">
+              <a href="#">
+                <img src="images/src/logo.png" alt="moderno">
+              </a>
+            </div>
+            <div class="header__text">
+              <a href="#">
+                <span>
+                  Need help?
+                </span>
+              </a> Talk to an expert:
+              <a class="header__phone" href="tel:61383766284">+61 3 8376 6284</a>
+            </div>
+            <div class="header__box">
+              <a class="basket" href="#"></a>
+              <a class="header__btn header__btn-login" href="#">Login</a>
+              <a class="header__btn header__btn-register" href="#">Register</a>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="header__menu">
+        <div class="container">
+          <nav class="menu">
+            <ul class="menu__list">
+              <li class="menu__item">
+                <a class="menu__link" href="#">Home</a>
+              </li>
+              <li class="menu__item">
+                <a class="menu__link" href=" #">About</a>
+              </li>
+              <li class="menu__item">
+                <a class="menu__link" href="#">WordPress</a>
+              </li>
+              <li class="menu__item">
+                <a class="menu__link" href="#">Joomla</a>
+              </li>
+              <li class="menu__item">
+                <a class="menu__link" href="#">PSD</a>
+              </li>
+              <li class="menu__item">
+                <a class="menu__link" href="#">Plugins</a>
+              </li>
+              <li class="menu__item">
+                <a class="menu__link" href="#">Components</a>
+              </li>
+              <li class="menu__item">
+                <a class="menu__link" href="#">Pages</a>
+              </li>
+              <li class="menu__item">
+                <a class="menu__link" href="#">Contact</a>
+              </li>
+              <li class="menu__item">
+                <a class="menu__link" href="#">Help</a>
+              </li>
+            </ul>
+          </nav>
+        </div>
+      </div>
+    </header>
 
     <script src="js/app.js"></script>
   </body>
